Improved spacing of the retweet user image to prevent it getting cut off on the active tweet

--- a/Contents/Resources/style.css
+++ b/Contents/Resources/style.css
@@ -188,8 +188,8 @@ body {
 	display: none;
 	position: absolute;
 	z-index: 10;
-	top: 45px;
-	left: 50px;
+	top: 40px;
+	left: 48px;
 	width: 28px;
 	height: 28px;
 	-webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, .4);
